--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.contenedor{
+    display: flex;
+}
 .nav-list{
     display: flex;
     align-items: center;
@@ -55,6 +58,7 @@
 }
 
 .tarjetaPresentacion{
+    height: 700px;
     width: 600px;
     border: 1px solid #ccc; 
     border-radius: 10px; 
@@ -114,4 +118,44 @@ input{
     cursor: pointer;
     margin: 20px;
     margin-left: 30px;
+}
+
+.tarjetaEducacion{
+    width: 570px;
+    border: 1px solid #ccc; 
+    border-radius: 10px; 
+    overflow: hidden; 
+    font-family: Arial, sans-serif; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    margin: 30px;
+    padding: 15px;
+}
+
+.tarjetaEducacion p{
+    margin-bottom: 2px;
+}
+
+.solicitudes{
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    height: 300px;
+    width: 500px;
+    border-radius: 10px; 
+    overflow: hidden; 
+    font-family: Arial, sans-serif; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    margin: 30px;
+    padding: 15px;
+}
+
+.solicitud{
+    display: flex;
+    
+}
+.solicitudes img{
+    height: 20px;
+    width: 20px;
+    padding: 0;
+    margin: 0;
 }
